Name:                QuickNote
Version:             0.1
Synopsis:            Web server and page for taking quick notes
Description:         
          QuickNote is a web program for quickly taking notes
          in LaTeX format.
          .
          The user enters the notes and the program converts
          it to pretty LaTeX and generates a PDF for the user
          to download.
License:             AllRightsReserved
Author:              Joacim Andersson
Maintainer:          joac.andersson@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable QuickNote
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap                      >= 0.13,
    lens                      >= 0.12,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    HaTeX,
    text,
    process

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
